# RBM-ResEval

./: CMakeLists.txt  README.md
cmake/: CMakeLists.txt  Dependencies.cmake
cmake/modules/: LibFindSmart.cmake
include/: Extract_Basis.hpp  Generate_snset.hpp  Opt_struct.hpp  Post-Process.hpp  Pre-Process.hpp  Reconstruction.hpp  System_Calls.hpp  read_Inputs.hpp  write_Outputs.hpp
libraries/: Extract_Basis.cpp  Generate_snset.cpp  Opt_struct.cpp  Post-Process.cpp  Pre-Process.cpp  Reconstruction.cpp  System_Calls.cpp  read_Inputs.cpp  write_Outputs.cpp
src/: AdaptSample_ResEval.cpp  AdaptiveMODES.cpp  AdaptiveMODES_DTR_Offline.cpp  AdaptiveMODES_DTR_Online.cpp  AdaptiveMODES_DTR_OnlineNew.cpp  AdaptiveMODES_Offline.cpp  AdaptiveMODES_OfflineNew.cpp  AdaptiveMODES_Online.cpp  AdaptiveMODES_PressureDirect.cpp  Adaptive_Energy_Mode.cpp  Adaptive_MODESConservative.cpp  Adaptive_Rec_DTR.cpp  Adaptive_ResEval.cpp  Adaptive_Sampling.cpp  CMakeLists.txt  ExtractPointEvoTime.cpp  FLUID_MODES_DNS.cpp  GradProva.cpp  Nmodes_Sensitivity_DTR.cpp  POD_Rec.cpp  ResEval_DtRes.cpp  SingleMODES.cpp  Stesttest.cpp  main.cpp
